--- a/views/vwUser/details.hbs
+++ b/views/vwUser/details.hbs
@@ -143,17 +143,22 @@
             {{/if}}
           </div>
           <div class="d-flex mt-3">
+            {{#ifCond userID "==" 0}}
+              <a href="/users/login" class="buy-now text-center text-dark"><h5 style="font-weight: 500;">Buy now</h5></a>
+              <a href="/users/login" class="course-add-to-wishlist">
+                <i id="add-to-wishlist" class="fa fa-heart{{#unless isInWishList}}-o{{/unless}} fa-lg"></i>
+              </a>
+            {{else}}
             <form action="/user-courses/buy-now" method="post">
               <input type="hidden" id="courseID" name="courseID" value="{{course.courseID}}">
               <input type="hidden" id="userID" name="userID" value="{{authUser.userID}}"> 
               <button class="buy-now text-center text-dark" type="submit"><h5 style="font-weight: 500;">Buy now</h5></button>
             </form>
-              <button class="course-add-to-wishlist" onclick="addToWishlist();">
-                <i id="add-to-wishlist" class="fa fa-heart{{#unless isInWishList}}-o{{/unless}} fa-lg"></i>
-              </button>
-            </form>
+            <button class="course-add-to-wishlist" onclick="addToWishlist();">
+              <i id="add-to-wishlist" class="fa fa-heart{{#unless isInWishList}}-o{{/unless}} fa-lg"></i>
+            </button>
+            {{/ifCond}}
           </div>
-          
         </div>
       </div>
     </div>
