--- a/views/vwTeacher/addProfile.hbs
+++ b/views/vwTeacher/addProfile.hbs
@@ -160,20 +160,20 @@
             <div class="card" style="align-items: center;">
                 <div class="card-body">
                     <div class="e-profile">
-                        <div class="row" style="background-image: url(https://drive.google.com/uc?export=view&id={{this.teacher.bground}}); margin-bottom:2%">
-                        <div class="col-12 col-sm-auto mb-3">
-                            <div class="mx-auto" style="width: 340px;">
-                                <div class="d-flex justify-content-center align-items-center rounded-circle" style="width: 270px; height: 270px; background-color: rgb(233, 236, 239); margin-top:20px">
-                                    <img style="width: 250px; height: 250px; margin-top: 8px" src="https://drive.google.com/uc?export=view&id={{this.teacher.avatar}}" alt="This's avatar" class="rounded-circle mb-2 img-thumbnail">
+                        <div class="row" style="margin-bottom:2%">
+                            <div class="col-12 col-sm-auto mb-3">
+                                <div class="mx-auto" style="width: 340px;">
+                                    <div class="d-flex justify-content-center align-items-center rounded-circle" style="width: 270px; height: 270px; background-color: rgb(233, 236, 239); margin-top:20px">
+                                        <img style="width: 250px; height: 250px; margin-top: 8px" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="This's avatar" class="rounded-circle mb-2 img-thumbnail">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col d-flex flex-column flex-sm-row justify-content-between mb-3">
-                            <div class="text-center text-sm-left mb-2 mb-sm-0">
-                                <h4 class="pt-sm-2 pb-1 mb-0 text-nowrap" style="text-shadow:2px 2px black; color: white">{{this.teacher.teacherName}}</h4>
-                                <p class="mb-0" style=" color: white">@khangnhat</p>
-                                <div class="text-muted" style="color: gray"><small>Last seen 2 hours ago</small></div>
-                                <form action="/teacher/profile/edit" method="post" class="mt-3" enctype="multipart/form-data">
+                            <div class="col d-flex flex-column flex-sm-row justify-content-between mb-3">
+                                <div class="text-center text-sm-left mb-2 mb-sm-0">
+                                    <h4 class="pt-sm-2 pb-1 mb-0 text-nowrap" style="text-shadow:2px 2px black; color: white">{{this.user.name}}</h4>
+                                    <p class="mb-0" style=" color: white">Bio</p>
+                                    <div class="text-muted" style="color: gray"><small>Last seen 2 hours ago</small></div>
+                                    <form action="/teacher/profile/add{{this.user.userID}}" method="post" class="mt-3" enctype="multipart/form-data">
                                     <div class="mt-2">
 
                                         <div class="custom-file">
@@ -216,7 +216,7 @@
                                         <div class="col">
                                             <div class="form-group">
                                                 <label>Full Name </label>
-                                                <input id="teacherName" class="form-control" type="text" name="teacherName" placeholder="{{this.teacher.teacherName}}" value="{{this.teacher.teacherName}}">
+                                                <input id="teacherName" class="form-control" type="text" name="teacherName" placeholder="{{this.user.name}}" value="{{this.user.name}}">
                                             </div>
                                         </div>
                                     </div>
@@ -224,13 +224,13 @@
                                         <div class="col">
                                             <div class="form-group">
                                                 <label>Facebook link <i class="fa fa-facebook-official" aria-hidden="true"></i></label>
-                                                <input name="fb_link" id="fb_link" class="form-control" type="text" placeholder="www.facebook.com/user" value="{{this.teacher.fb_link}}">
+                                                <input name="fb_link" id="fb_link" class="form-control" type="text" placeholder="www.facebook.com/user" value="Not have facebook link">
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="form-group">
                                                 <label>Linkedin <i class="fa fa-linkedin-square" aria-hidden="true"></i></label>
-                                                <input name="linkedin" id="linkedin" class="form-control" type="text" name="username" placeholder="www.linkedin.com/user" value="{{this.teacher.linkedin}}">
+                                                <input name="linkedin" id="linkedin" class="form-control" type="text" placeholder="www.linkedin.com/user" value="Not have linkedin">
                                             </div>
                                         </div>
                                     </div>
@@ -238,7 +238,7 @@
                                         <div class="col">
                                             <div class="form-group">
                                                 <label>Change your bio <i class="fa fa-pencil-square" aria-hidden="true"></i></label>
-                                                <input class="form-control" type="text" name="teacherBio" value="{{this.teacher.teacherBio}}" id="teacherBio" placeholder="{{this.teacher.teacherBio}}">
+                                                <input class="form-control" type="text" name="teacherBio" value="None" id="teacherBio" placeholder="Your cool bio <3">
                                             </div>
                                         </div>
                                     </div>
@@ -246,53 +246,29 @@
                                         <div class="col mb-3">
                                             <div class="form-group">
                                                 <label>Description</label>
-                                                <textarea class="form-control" name="description" id="description" rows="5">{{{this.teacher.description}}}</textarea>
+                                                <textarea class="form-control" name="description" id="description" rows="5"></textarea>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-12 col-sm-6 mb-3">
-                                    <div class="mb-2"><b>Change Password</b></div>
-                                    <div class="row">
                                         <div class="col">
                                             <div class="form-group">
-                                                <label>Current Password</label>
-                                                <input type="password" placeholder="••••••">
+                                                <label hidden>USER_ID</label>
+                                                <input name="userID" type="text" hidden value="{{this.user.userID}}">
+                                                <input name="email" type="text" hidden value="{{this.user.email}}">
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col">
-                                            <div class="form-group">
-                                                <label>New Password</label>
-                                                <input type="password" placeholder="••••••">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col">
-                                            <div class="form-group">
-                                                <label>Confirm <span class="d-none d-xl-inline">Password</span></label>
-                                                <input type="password" placeholder="••••••">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-5 offset-sm-1 mb-3">
-                                    <div class="mb-2"><b>Keeping in Touch</b></div>
-                                    <div class="row">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col d-flex justify-content-end">
-                                    <button class="btn btn-primary" type="submit" formaction="/teacher/profile/edit?id={{this.teacher.teacherID}}">Save Changes</button>
+                                    <button class="btn btn-primary" type="submit" formaction="/teacher/profile/add?id={{this.user.userID}}">Save Changes</button>
                                 </div>
                             </div>
                             </form>
-
                         </div>
                     </div>
                 </div>
