--- a/views/vwAccount/profile-settings.hbs
+++ b/views/vwAccount/profile-settings.hbs
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
                 <label for="txtRole">Role</label>
-                <input name="role" type="text" class="form-control" id="role"  value="{{this.user.name}}" readonly>
+                <input name="role" type="text" class="form-control" id="role"  value="{{this.user.role}}" readonly>
             </div>
             <div class="form-group">
                 <label for="txtIntroduction">Introduction</label>
