Admin, teacher mainpage update, authentication update

--- a/views/layouts/main1.hbs
+++ b/views/layouts/main1.hbs
@@ -62,15 +62,14 @@
 
           {{#ifCond authUser.role "==" "ROLE.ADMIN"}}
               <li class="nav-item">
-                  <a class="nav-link" href="/admin">Admin Panel</a>
+
+                  <a class="nav-link" href="/admin">
+                      Admin Panel
+                      <i class="fa fa-lock" aria-hidden="true"></i>
+                  </a>
               </li>
           {{/ifCond}}
 
-          {{#ifCond authUser.role "==" "ROLE.TEACHER"}}
-              <li class="nav-item">
-                  <a class="nav-link" href="/teacher/getId?id={{authUser.userID}}">Teacher Profile</a>
-              </li>
-          {{/ifCond}}
 
 
           {{#if auth}}
@@ -96,7 +95,22 @@
                           <i class="fa fa-id-card" aria-hidden="true"></i>
                           Public profile
                       </a>
+                  {{#ifCond authUser.role "==" "ROLE.TEACHER"}}
 
+                    <a class="dropdown-item" href="/teacher/getId?id={{authUser.userID}}">
+                      <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                      Teacher Profile
+                  </a>
+
+                    {{/ifCond}}
+
+                  {{#ifCond authUser.role "==" "ROLE.ADMIN"}}
+                      <a class="dropdown-item" href="/admin">
+                          <i class="fa fa-lock" aria-hidden="true"></i>
+                          Admin Panel
+                      </a>
+
+                  {{/ifCond}}
                       <a class="dropdown-item" href="/users/profile-settings/{{authUser.userID}}">
                           <i class="fa fa-address-book" aria-hidden="true"></i>
                           Profile settings
