--- a/views/vwAdmin/vwUser/edit.hbs
+++ b/views/vwAdmin/vwUser/edit.hbs
@@ -22,7 +22,7 @@
                 <i class="fa fa-ban" aria-hidden="true"></i>
                 Ban
             </button>
-            <button type="submit" class="btn btn-danger" formaction="/admin/users/ban">
+            <button type="submit" class="btn btn-danger" formaction="/admin/users/unban">
                 Unban
             </button>
             <button type="submit" class="btn btn-danger" formaction="/admin/users/del">
