Edit view for layout main1

--- a/views/vwTeacher/addCourse.hbs
+++ b/views/vwTeacher/addCourse.hbs
@@ -1,5 +1,5 @@
 <!--Phan Huy create courses view-->
-<div class="d-lg-flex justify-content-lg-center" style="font-size: 14px; background-size: cover; height: 100%; width: 100%; background-position: center; background-image: url(https://images.pexels.com/photos/633409/pexels-photo-633409.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2)">
+<div class="d-lg-flex justify-content-lg-center" style="font-size: 14px; background-size: cover; height: 100%; width: 100%; background-position: center; background-image: url(https://images.pexels.com/photos/397998/pexels-photo-397998.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2)">
   <div class="contents order-2 order-md-1">
     <div class="container">
       <div class="row align-items-center justify-content-center">
@@ -155,7 +155,7 @@
                       </div>
                     </div>
                   </div>
-                    <label for="maindes" style="font-size: 32px;" class="font-weight-bold mt-5 mb-3 text-black-50">Description</label>
+                    <label for="maindes" style="font-size: 32px;" class="font-weight-bold mt-3 mb-3">Description</label>
                   <textarea name="maindes" required>
                   </textarea>
                 </div>
