--- a/views/vwTeacher/addLecture.hbs
+++ b/views/vwTeacher/addLecture.hbs
@@ -1,5 +1,5 @@
 <!--Phan Huy create courses view-->
-<div class="d-lg-flex justify-content-lg-center">
+<div class="d-lg-flex justify-content-lg-center" style="font-size: 14px; background-size: cover; height: 100%; width: 100%; background-position: center; background-image: url(https://images.pexels.com/photos/397998/pexels-photo-397998.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2)">
     <div class="contents order-2 order-md-1">
         <div class="container">
             <div class="row align-items-center justify-content-center">
