--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -186,7 +186,7 @@
                     height="264"
                     data-setup='{"poster":"{{this.lecture.poster}}"}'
             >
-                <source src="{{this.lecture.videoURL}}" type="video/mp4"/>
+                <source src="https://drive.google.com/uc?export=view&id={{this.lecture.videoURL}}" type="video/mp4"/>
                 <!--    <source src="MY_VIDEO.webm" type="video/webm" />-->
                 <p class="vjs-no-js">
                     To view this video please enable JavaScript, and consider upgrading to a
