--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -58,7 +58,7 @@
                                 <div class="row">
                                     {{#each this.courses}}
                                         <div class="col-lg-4 mb-4">
-                                            <a href="/course/{{courseID}}_{{courseName}}">
+                                            <a href="/user-courses/detail?catID={{caiID}}&id={{courseID}}">
                                                 <div class="shadow card" style=" border-style:double" >
                                                         <img src="https://drive.google.com/uc?export=view&id={{image}}" alt="" height="200px" class="card-img-top">
                   
