Fix main for ae

--- a/views/layouts/main1.hbs
+++ b/views/layouts/main1.hbs
@@ -25,7 +25,7 @@
         // });
         tinymce.init({
             // Select the element(s) to add TinyMCE to using any valid CSS selector
-            selector: 'textarea',
+            selector: 'phanhuytext',
 
             // Tip - To keep TinyMCE lean, only include the plugins you need.
             plugins: `a11ychecker advcode advlist advtable anchor autocorrect autosave editimage image link linkchecker lists media mediaembed pageembed powerpaste searchreplace table template tinymcespellchecker visualblocks wordcount`,
