--- a/views/home.hbs
+++ b/views/home.hbs
@@ -197,7 +197,7 @@
                 <div id="cardslider2" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         {{#each this.listSubDescCourses}}
-                            <div class="carousel-item {{#ifCond @index '==' '1'}} active {{/ifCond}}">
+                            <div class="carousel-item {{#ifCond @index '==' '0'}} active {{/ifCond}}">
                                 <div class="card-deck">
                                     {{#each this}}
                                         <div class="card" style="height: 20rem">
@@ -406,170 +406,32 @@
                 <h4 class="bg-light">Lĩnh vực hot nhất</h4>
                 <div id="cardslider4" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active">
-                            <div class="card-deck">
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This card has even longer content than the
-                                            first to
-                                            show that equal height action.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This card has even longer content than the
-                                            first to
-                                            show that equal height action.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This card has even longer content than the
-                                            first to
-                                            show that equal height action.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
+                        {{#each this.listSubMostEnrolledCourses}}
+                            <div class="carousel-item {{#ifCond @index '==' '0'}} active {{/ifCond}}">
+                                <div class="card-deck">
+                                    {{#each this}}
+                                        <div class="card" style="height: 20rem">
+                                            <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
+                                            <div class="card-body">
+                                                <h5 class="card-title">{{this.catName}}</h5>
+                                                <p class="card-text">Total student: {{this.totalStudent}}</p>
+                                                <p class="card-text"><small class="text-muted">Last updated 3 mins
+                                                    ago</small>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    {{/each}}
                                 </div>
                             </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="card-deck">
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This card has supporting text below as a natural lead-in to
-                                            additional content.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This card has even longer content than the
-                                            first to
-                                            show that equal height action.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This card has even longer content than the
-                                            first to
-                                            show that equal height action.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item ">
-                            <div class="card-deck">
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a longer card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This content is a little bit longer.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This card has supporting text below as a natural lead-in to
-                                            additional content.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This card has even longer content than the
-                                            first to
-                                            show that equal height action.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="card" style="height: 20rem">
-                                    <img class="card-img-top" src="/imgs/1.jpg" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                        <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to additional content. This card has even longer content than the
-                                            first to
-                                            show that equal height action.</p>
-                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {{/each}}
                     </div>
                     <button class="carousel-control-prev bg-secondary" style="width: 2%" type="button"
-                            data-target="#cardslider4" data-slide="prev">
+                            data-target="#cardslider2" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </button>
                     <button class="carousel-control-next bg-secondary" style="width: 2%" type="button"
-                            data-target="#cardslider4" data-slide="next">
+                            data-target="#cardslider2" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </button>
