--- a/views/vwTeacher/addLecture.hbs
+++ b/views/vwTeacher/addLecture.hbs
@@ -115,8 +115,8 @@
                                         </div>
                                     </div>
                                     <label for="description" style="font-size: 32px;" class="font-weight-bold mt-3 mb-3">Caption for lectures, resource,..</label>
-                                    <textarea name="description" required>
-                  </textarea>
+                                    <phanhuytext name="description" required>
+                  </phanhuytext>
                                 </div>
                             </div>
                         </div>
