full-text search (not including filter)

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,6 +29,11 @@
     color: #5cbdbb;
 }
 
+.search-btn {
+    border: 0px;
+    background-color: none;
+}
+
 .dropdown-submenu {
     position: relative;
 }
