Update view add lectures, lectures for description of WYSIWYG

--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -249,7 +249,7 @@
                     </div>
                     <div role="tabpanel" id="overview" class="tab-pane mt-3">
                         <h3>About this lecture</h3>
-                        {{this.lecture.description}}
+                        {{{this.lecture.description}}}
                     </div>
                     <div role="tabpanel" id="review" class="tab-pane">
                         <h4>Student feedbacks</h4>
