--- a/views/vwStudent/lectures.hbs
+++ b/views/vwStudent/lectures.hbs
@@ -170,10 +170,11 @@
             ajax.send();
         }
         
+        
     </script>
 {{/section}}
 
-<div class="container-fluid" style="height: 700px">
+<div class="container-fluid" style="">
 
     <div class="row">
         <div class="col-md-12 mt-1" style="height: 500px">
